# grabber

./: .gitignore  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: rust.yml
cmd/: add.go  clone.go  common.go  pull.go  push.go  root.go
cmd/add/: addKey.go  main.go
cmd/git/: clone.go  migrate.go  pull.go  push.go
cmd/list/: list.go
cmd/profiles/: add.go  list.go  track.go  tui.go
src/: add.rs  list.rs  main.rs  new.rs  push.rs  setup.rs
tui/migrate/progress/: tui.go
tui/track/: tui.go
