[package]
name = "grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["cargo", "derive", "color"] }
colored = "2.0.4"
comfy-table = "6.1.2"
dirs = "4.0.0"
toml_edit = "0.19.14"
toml = "0.7.6"
serde = { version = "1.0.178", features = ["derive"] }
dialoguer = "0.10.4"
regex = "1.9.1"
